Fix products alignment

--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -15,7 +15,7 @@ body {
 }
     
 .container {
-    width: min(100% - 30px, 1080px);
+    width: min(100% - 30px, 1280px);
     margin-inline: auto;
 }
 
@@ -223,13 +223,14 @@ footer h2 {
     max-width: 1200px;
     margin: 0 auto;
     gap: 4rem 0;
+    justify-content: center;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 850px) {
     .products { grid-template-columns: repeat(2, 1fr); }
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1250px) {
     .products { grid-template-columns: repeat(3, 1fr); }
 }
 
